2005-10-09  Erez Zadok  <ezk@cs.sunysb.edu>

	* README.sun2amd: place holder.

	* Makefile.am (EXTRA_DIST): distribute new README.sun2amd file.

2005-10-07  Erez Zadok  <ezk@cs.sunysb.edu>

	* m4/macros/check_mnttab_type.m4: move the test for MOUNT_* to the
	very end, after the test using getvfsbyname().

	* m4/macros/expand_run_string.m4: if the string value returned is
	empty, consider it invalid.

	* m4/macros/check_varargs_macros.m4: rewrite macro so it'll
	try and compile the varargs test, not just cpp it.  Some systems
	pass the old cpp test, but not when you actually try to compile
	the code (Tru64's cc).

	* conf/autofs/autofs_solaris_v1.h: redefine
	autofs_strdup_space_hack as a macro to str3cat(NULL,(s)," ","").
	This works everywhere and we avoid linking problems, inline
	functions, etc.

	* conf/autofs/autofs_solaris_v1.c (autofs_mount_fs): remove
	autofs_strdup_space_hack() function altogether.

	* m4/macros/os_cflags.m4: remove hack that hardcodes pte_t=u_int.

	* configure.in: test for <sys/immu.h> header.
	Test for pte_t, but only on IRIX6 systems.

	* Makefile.am (EXTRA_DIST_M4): distribute new type_pte_t.m4 file.

	* m4/macros/type_pte_t.m4: new test for existence of pte_t
	typedef, needed on some IRIX-6.5/gcc systems.

	* m4/macros/header_templates.m4: add missing templates for
	HAVE_EXTERN_GETDTABLESIZE, HAVE_EXTERN_GETWD, and
	HAVE_EXTERN_UALARM.

	* amd/info_exec.c (exec_map_open): break assignment from inside
	conditional, to work around an IRIX-6.5 cc bug.

	* amd/Makefile.am (amd_LDADD, sun2amd_LDADD): put libaminfo.a
	before libamu.la.  Some linkers (e.g., IRIX-6.5) incorrectly
	complain about undefined symbols.

	* fsinfo/fsi_util.c (set_ether_if), amd/map.c (unmount_mp),
	libamu/xutil.c (expand_error), libamu/strutil.c (xsnprintf): avoid
	comparison between signed and unsigned integers.

	* conf/autofs/autofs_solaris_v1.h, conf/autofs/autofs_solaris_v1.c
	(autofs_strdup_space_hack): move "space_hack" function from static